--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
 	<meta charset="UTF-8">
 	<meta name="viewport"
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="stylesheet" href="./css/style.css" />
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 </head>
 
 <body>
 	<header class="header">
-
+		<div class="container">
+			<div class="header__wrapper">
+				<img class="header__logo" src="../FE07-wk-1-Murachou-Yauhen-main/img/logo/svg-logo.svg" alt="AXIT logo">
+				<nav class="header__nav">
+					<ul class="header__list">
+						<li class="header__item"><a class="header__link"
+								href="http://wikireality.ru/wiki/%D0%A4%D0%B8%D1%87%D0%B0#:~:text=%D0%A4%D0%B8%D1%87%D0%B0%20(%D0%B0%D0%BD%D0%B3%D0%BB.,%D0%BD%D0%B8%D0%B1%D1%83%D0%B4%D1%8C%20%D0%BD%D0%B5%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%B0%D1%8F%20%D0%B4%D0%BE%D0%BF%D0%BE%D0%BB%D0%BD%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%BE%D0%B7%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D1%8C%2C%20%D1%84%D0%B8%D1%88%D0%BA%D0%B0."
+								target="_blank">Featuries</a>
+						</li>
+						<li class="header__item"><a class="header__link" href="https://www.youtube.com/watch?v=6yP4Nm86yk0"
+								target="_blank">About</a></li>
+						<li class="header__item"><a class="header__link" href="#pricing">Pricing</a></li>
+						<li class="header__item"><a class="header__link" href="#">Review</a></li>
+						<li class="header__item"><a class="header__link" href="#">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
 
 	</header>
 
