feat: add header without work links. Begining of about me

--- a/index.html
+++ b/index.html
@@ -14,23 +14,62 @@
 	<header class="header">
 		<div class="container">
 			<div class="header__wrapper">
-				<img class="header__logo" src="../FE07-wk-1-Murachou-Yauhen-main/img/logo/svg-logo.svg" alt="AXIT logo">
+				<img class="header__logo" src="./img/rs_school_js.svg" alt="RSSchool logo">
 				<nav class="header__nav">
 					<ul class="header__list">
 						<li class="header__item"><a class="header__link"
 								href="http://wikireality.ru/wiki/%D0%A4%D0%B8%D1%87%D0%B0#:~:text=%D0%A4%D0%B8%D1%87%D0%B0%20(%D0%B0%D0%BD%D0%B3%D0%BB.,%D0%BD%D0%B8%D0%B1%D1%83%D0%B4%D1%8C%20%D0%BD%D0%B5%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%B0%D1%8F%20%D0%B4%D0%BE%D0%BF%D0%BE%D0%BB%D0%BD%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%BE%D0%B7%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D1%8C%2C%20%D1%84%D0%B8%D1%88%D0%BA%D0%B0."
-								target="_blank">Featuries</a>
+								target="_blank">About Me</a>
 						</li>
 						<li class="header__item"><a class="header__link" href="https://www.youtube.com/watch?v=6yP4Nm86yk0"
-								target="_blank">About</a></li>
-						<li class="header__item"><a class="header__link" href="#pricing">Pricing</a></li>
-						<li class="header__item"><a class="header__link" href="#">Review</a></li>
-						<li class="header__item"><a class="header__link" href="#">Contact</a></li>
+								target="_blank">Skills</a></li>
+						<li class="header__item"><a class="header__link" href="#pricing">Education</a></li>
+						<li class="header__item"><a class="header__link" href="#pricing">Code example</a></li>
+						<li class="header__item"><a class="header__link" href="#">Languages</a></li>
+						<li class="header__item"><a class="header__link" href="#">My contacts</a></li>
 					</ul>
 				</nav>
 			</div>
 
 	</header>
+
+	<section class="axit">
+		<div class="container">
+			<div class="axit__wrapper">
+				<div class="axit__leftrow">
+					<img src="../FE07-wk-1-Murachou-Yauhen-main/img/logo/AXIT.svg" alt="AXIT" class="axit__logo">
+					<h2 class="axit__title">modern axure templtate for beautyful prototypes</h2>
+					<p class="axit__subtitle">Lorem, ipsum dolor sit amet <br> consectetur adipisicing elit. Repellendus.</p>
+					<div class="axit__link">
+						<a class="axit__download"
+							href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B8%D1%84%D1%80%D0%BE%D0%B2%D0%BE%D0%B5_%D1%81%D0%BA%D0%B0%D1%87%D0%B8%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%BC%D1%83%D0%B7%D1%8B%D0%BA%D0%B8"
+							target="_blank">
+							Download</a>
+					</div>
+
+				</div>
+				<div class="axit__rightrow">
+					<form action="#" method="POST" class="axit__form">
+						<h3 class="axit__trial">Try Your <span class="axit__free__red">FREE</span> Trial Today</h3>
+						<div class="axit__username">
+							<label for="username__axit">Name</label><br>
+							<input type="text" name="username" id="username__axit">
+						</div>
+						<div class="axit__email">
+							<label for="email__axit">Email</label><br>
+							<input type="email" name="email" id="email__axit">
+						</div>
+						<div class="axit__password">
+							<label for="password__axit">Password</label><br>
+							<input type="password" name="password" id="password__axit">
+						</div>
+						<div class="button__axit"><button type="submit" class="send__axit">Get Started</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<footer class="footer">
 
