feat: add about me without working links

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Homework</title>
+	<title>CV Yauhen Murachou</title>
 	<meta charset="UTF-8">
 	<meta name="viewport"
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -30,46 +30,30 @@
 					</ul>
 				</nav>
 			</div>
-
 	</header>
 
-	<section class="axit">
-		<div class="container">
-			<div class="axit__wrapper">
-				<div class="axit__leftrow">
-					<img src="../FE07-wk-1-Murachou-Yauhen-main/img/logo/AXIT.svg" alt="AXIT" class="axit__logo">
-					<h2 class="axit__title">modern axure templtate for beautyful prototypes</h2>
-					<p class="axit__subtitle">Lorem, ipsum dolor sit amet <br> consectetur adipisicing elit. Repellendus.</p>
-					<div class="axit__link">
-						<a class="axit__download"
+	<main>
+		<section class="about">
+			<div class="container">
+				<div class="about__wrapper">
+					<div class="about__leftrow">						
+						<h2 class="about__title">hello! my name is <br /> yauhen murachou</h2>
+						<p class="about__subtitle">Junior frontend-developer (React)
+						</p>
+						<a class="about__contact"
 							href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B8%D1%84%D1%80%D0%BE%D0%B2%D0%BE%D0%B5_%D1%81%D0%BA%D0%B0%D1%87%D0%B8%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%BC%D1%83%D0%B7%D1%8B%D0%BA%D0%B8"
 							target="_blank">
-							Download</a>
+							Contact me</a>
 					</div>
-
-				</div>
-				<div class="axit__rightrow">
-					<form action="#" method="POST" class="axit__form">
-						<h3 class="axit__trial">Try Your <span class="axit__free__red">FREE</span> Trial Today</h3>
-						<div class="axit__username">
-							<label for="username__axit">Name</label><br>
-							<input type="text" name="username" id="username__axit">
-						</div>
-						<div class="axit__email">
-							<label for="email__axit">Email</label><br>
-							<input type="email" name="email" id="email__axit">
-						</div>
-						<div class="axit__password">
-							<label for="password__axit">Password</label><br>
-							<input type="password" name="password" id="password__axit">
-						</div>
-						<div class="button__axit"><button type="submit" class="send__axit">Get Started</button>
-						</div>
-					</form>
+					<div class="about__rightrow">
+						<img src="./img/20200430_151419 — копия.jpg" class="about__avatar">
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</main>
+
+	
 
 	<footer class="footer">
 
