--- a/index.html
+++ b/index.html
@@ -11,32 +11,28 @@
 </head>
 
 <body>
-	<header class="header">
+	<header class="header" id="header">
 		<div class="container">
 			<div class="header__wrapper">
 				<img class="header__logo" src="./img/rs_school_js.svg" alt="RSSchool logo">
 				<nav class="header__nav">
 					<ul class="header__list">
-						<li class="header__item"><a class="header__link"
-								href="http://wikireality.ru/wiki/%D0%A4%D0%B8%D1%87%D0%B0#:~:text=%D0%A4%D0%B8%D1%87%D0%B0%20(%D0%B0%D0%BD%D0%B3%D0%BB.,%D0%BD%D0%B8%D0%B1%D1%83%D0%B4%D1%8C%20%D0%BD%D0%B5%D0%B4%D0%BE%D0%BA%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%BD%D0%B0%D1%8F%20%D0%B4%D0%BE%D0%BF%D0%BE%D0%BB%D0%BD%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F%20%D0%B2%D0%BE%D0%B7%D0%BC%D0%BE%D0%B6%D0%BD%D0%BE%D1%81%D1%82%D1%8C%2C%20%D1%84%D0%B8%D1%88%D0%BA%D0%B0."
-								target="_blank">About Me</a>
-						</li>
-						<li class="header__item"><a class="header__link" href="https://www.youtube.com/watch?v=6yP4Nm86yk0"
-								target="_blank">Skills</a></li>
-						<li class="header__item"><a class="header__link" href="#pricing">Education</a></li>
-						<li class="header__item"><a class="header__link" href="#pricing">Code example</a></li>
-						<li class="header__item"><a class="header__link" href="#">Languages</a></li>
-						<li class="header__item"><a class="header__link" href="#">My contacts</a></li>
+						<li class="header__item"><a class="header__link" href="#about">About Me</a> </li>
+						<li class="header__item"><a class="header__link" href="#skills">Skills</a></li>
+						<li class="header__item"><a class="header__link" href="#education">Education</a></li>
+						<li class="header__item"><a class="header__link" href="#code">Code example</a></li>
+						<li class="header__item"><a class="header__link" href="#projects">Projects</a></li>
+						<li class="header__item"><a class="header__link" href="#footer">My contacts</a></li>
 					</ul>
 				</nav>
 			</div>
 	</header>
 
 	<main>
-		<section class="about">
+		<section class="about" id="about">
 			<div class="container">
 				<div class="about__wrapper">
-					<div class="about__leftrow">						
+					<div class="about__leftrow">
 						<h2 class="about__title">hello! my name is <br /> yauhen murachou</h2>
 						<p class="about__subtitle">Junior frontend-developer (React)
 						</p>
@@ -51,12 +47,124 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="skills" id="skills">
+			<div class="container">
+				<h3 class="tabs__title">My skills</h3>
+				<ul>
+					<li>HTML5, CSS3</li>
+					<li>JavaScript</li>
+					<li>React</li>
+					<li>Redux</li>
+					<li>Git, GitHub</li>
+					<li>VS Code, PrePros</li>
+					<li>Figma</li>
+					<li>Postman, MongoDB Compass</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class="education" id="education">
+			<div class="container">
+				<h3 class="tabs__title">Education and languages</h3>
+				<ul>
+					<li>Academy of the Ministry of Internal Affairs of the Republic of Belarus - Forensic examination
+						(2010-2015)</li>
+					<li>IT-school TeachMeSkills - React Front End Developer (21.01.2021-25.10.2021)</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class="code" id="code">
+			<div class="container">
+				<h3 class="tabs__title">Code example</h3>
+
+				<p>
+					This is a code snippet from my social networking tutorial project, written with React. Class component
+					"UserC" sends a Get request to the server and, using the map array method, displays a list of the
+					received users.
+				</p>
+
+				<pre>
+<code>
+	class UsersC extends React.Component {
+
+		constructor(props) {
+			super(props)
+		}
+	
+		componentDidMount() {
+			if (this.props.users.length === 0) {
+				axios.get('https://social-network.samuraijs.com/api/1.0/users')
+					.then(response =&gt; {
+						this.props.setUsers(response.data.items)
+					})
+			}
+		}
+	
+		render() {
+			return &lt;&gt;	
+				{
+					this.props.users.map(user =&gt;
+	
+						&lt;div key={user.id} className={classes.item}&gt;
+							&lt;span&gt;{user.photos.small ? &lt;img src='user.photos' /&gt;
+								: &lt;img src={avatar} className={classes.avatar} /&gt;}&lt;/span&gt;
+	
+							&lt;span&gt; {user.name} &lt;/span&gt;
+							&lt;span&gt; id: {user.id} &lt;/span&gt;
+							&lt;span&gt; {user.city} &lt;/span&gt;
+							&lt;span&gt; {user.country}&lt;/span&gt;
+							&lt;span&gt; {user.status}&lt;/span&gt;
+							&lt;div&gt;
+								{user.followed 
+									? &lt;button onClick={() =&gt; { this.props.unfollowUsers(user.id) }}&gt;unfollow&lt;/button&gt;
+									: &lt;button onClick={() =&gt; { this.props.followUsers(user.id) }}&gt;follow&lt;/button&gt;}
+							&lt;/div&gt;	
+						&lt;/div&gt;
+					)
+				}
+			&lt;/&gt;
+		}	
+	};
+</code> </pre>
+			</div>
+		</section>
+
+		<section class="projects" id="projects">
+			<div class="container">
+				<h3 class="tabs__title">My projects</h3>
+				<ul>
+					<li>Academy of the Ministry of Internal Affairs of the Republic of Belarus - Forensic examination
+						(2010-2015)</li>
+					<li>IT-school TeachMeSkills - React Front End Developer (21.01.2021-25.10.2021)</li>
+				</ul>
+			</div>
+		</section>
 	</main>
 
-	
-
-	<footer class="footer">
-
+	<footer class="footer" id="footer">
+		<div class="container">
+			<div class="footer__wrapper">
+				<ul class="footer__list">
+					<li class="footer__icons"><a class="footer__link footer__facebook" href="https://www.facebook.com/"
+							target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+					<li class="footer__icons"><a class="footer__link footer__twitter" href="https://twitter.com/?lang=ru"
+							target="_blank"><i class="fab fa-twitter"></i></a></li>
+					<li class="footer__icons"><a class="footer__link footer__google" href="https://habr.com/ru/post/443728/"
+							target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
+					<li class="footer__icons"><a class="footer__link footer__pinterest" href="https://www.pinterest.com/"
+							target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
+					<li class="footer__icons"><a class="footer__link footer__instagram"
+							href="https://www.instagram.com/?hl=ru" target="_blank"><i class="fab fa-instagram"></i></a></li>
+					<li class="footer__icons"><a class="footer__link footer__StumbleUpon" href="https://www.stumbleupon.com/"
+							target="_blank"><i class="fab fa-stumbleupon"></i></a></li>
+					<li class="footer__icons"><a class="footer__link footer__wifi" href="" target="_blank"><i
+								class="fas fa-wifi"></i></a></li>
+				</ul>
+				<p class="copyright">&copy; 2015 Axure Theme</p>
+			</div>
+		</div>
 	</footer>
 
 </body>
