--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport"
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 </head>
 
@@ -17,7 +18,7 @@
 				<img class="header__logo" src="./img/rs_school_js.svg" alt="RSSchool logo">
 				<nav class="header__nav">
 					<ul class="header__list">
-						<li class="header__item"><a class="header__link" href="#about">About Me</a> </li>
+						<li class="header__item"><a class="header__link" href="#description">About Me</a> </li>
 						<li class="header__item"><a class="header__link" href="#skills">Skills</a></li>
 						<li class="header__item"><a class="header__link" href="#education">Education</a></li>
 						<li class="header__item"><a class="header__link" href="#code">Code example</a></li>
@@ -29,12 +30,13 @@
 	</header>
 
 	<main>
-		<section class="about" id="about">
+		<section class="about">
 			<div class="container">
 				<div class="about__wrapper">
 					<div class="about__leftrow">
 						<h2 class="about__title">hello! my name is <br /> yauhen murachou</h2>
 						<p class="about__subtitle">Junior frontend-developer (React)
+
 						</p>
 						<a class="about__contact"
 							href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B8%D1%84%D1%80%D0%BE%D0%B2%D0%BE%D0%B5_%D1%81%D0%BA%D0%B0%D1%87%D0%B8%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%BC%D1%83%D0%B7%D1%8B%D0%BA%D0%B8"
@@ -45,11 +47,83 @@
 						<img src="./img/20200430_151419 — копия.jpg" class="about__avatar">
 					</div>
 				</div>
+
+			</div>
+		</section>
+
+		<section class="description" id="description">
+			<div class="container">
+				<div class="description__header">
+					<h2 class="description__title title">About me</h2>
+					<p class="description__subtitle subtitle">I want to build a career in web development. Why you need to
+						hire me
+					</p>
+				</div>
+				<div class="description__row">
+					<div class="description__column">
+						<div class="item-description">
+							<div class="item-description__icon">
+								<div class="item-description__image">
+									<i class="fas fa-fingerprint"></i>
+								</div>
+							</div>
+							<div class="item-description__title">
+								<h3>
+									Past experience
+								</h3>
+							</div>
+							<div class="item-description__text">
+								<p> 6.5 years of experience as a forensic expert allowed me to develop such qualities as
+									accuracy, attention to detail, efficiency, strict time management</p>
+							</div>
+						</div>
+					</div>
+					<div class="description__column">
+						<div class="item-description">
+							<div class="item-description__icon">
+								<div class="item-description__image">
+									<i class="fas fa-graduation-cap"></i>
+								</div>
+							</div>
+							<div class="item-description__title">
+								<h3>
+									Great desire to develop
+								</h3>
+							</div>
+							<div class="item-description__text">
+								<p>Being an excellent student in life, I have always loved to study. Web development is really
+									exciting and I have a huge desire to improve in this profession.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="description__column">
+						<div class="item-description">
+							<div class="item-description__icon">
+								<div class="item-description__image">
+									<i class="fas fa-rocket"></i>
+								</div>
+							</div>
+							<div class="item-description__title">
+								<h3>
+									Motivation
+								</h3>
+							</div>
+							<div class="item-description__text">
+								<p>To be honest, I just love creating beautiful things from scratch. The desire to achieve
+									perfection in this is a huge motivation for me.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 
 		<section class="skills" id="skills">
 			<div class="container">
+
+
 				<h3 class="tabs__title">My skills</h3>
 				<ul>
 					<li>HTML5, CSS3</li>
