fix: corrections in education

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 				<div class="skills__wrapper">
 					<ul class="skills__list">
 						<li class="skills__item"> <i class="fab fa-html5"></i> HTML5 / <i class="fab fa-css3-alt"></i> CSS3 /
-							<i class="fab fa-sass"></i> SASS</li>
+							<i class="fab fa-sass"></i> SASS
+						</li>
 						<li class="skills__item"> <i class="fab fa-js"></i> JavaScript</li>
 						<li class="skills__item"> <i class="fab fa-react"></i> React / <span class="iconify"
 								data-icon="simple-icons:redux"></span>
@@ -148,12 +149,23 @@
 
 		<section class="education" id="education">
 			<div class="container">
-				<h3 class="education__title">Education and languages</h3>
+				<h3 class="education__title">Education</h3>
 				<ul>
 					<li>Academy of the Ministry of Internal Affairs of the Republic of Belarus - Forensic examination
 						(2010-2015)</li>
 					<li>IT-school TeachMeSkills - React Front End Developer (21.01.2021-25.10.2021)</li>
 				</ul>
+				<hr>
+				<ul>
+					<h3>
+						Languages
+					</h3>
+					<li>Belarusian - Native</li>
+					<li>English - Intermediate</li>
+					<li>Russian - Proficiency</li>
+					<li>Ukrainian - Upper Intermediate</li>
+				</ul>
+
 			</div>
 		</section>
 
