feat: add education and languages

--- a/index.html
+++ b/index.html
@@ -150,22 +150,48 @@
 		<section class="education" id="education">
 			<div class="container">
 				<h3 class="education__title">Education</h3>
+				<div class="education__wrapper">
+					<ul class="education__ul">
+						<li class="education__first">
+							<div class="education__univer">
+								Academy of the Ministry of Internal Affairs of the Republic of Belarus
+							</div>
+							<div class='education__year'>
+								2010-2015
+							</div>
+							<div>
+								Forensic examination
+							</div>
+						</li>
+						<li>
+							<div class="education__univer">
+								IT-school TeachMeSkills
+							</div>
+							<div class='education__year'>
+								21.01.2021-25.10.2021
+							</div>
+							<div>
+								React Front End Developer
+							</div>
+						</li>
+					</ul>
+
+					<div class="education__img">
+						<img class="education__image" src="./img/pngwing.com.png" alt="">
+					</div>
+				</div>
+
 				<ul>
-					<li>Academy of the Ministry of Internal Affairs of the Republic of Belarus - Forensic examination
-						(2010-2015)</li>
-					<li>IT-school TeachMeSkills - React Front End Developer (21.01.2021-25.10.2021)</li>
-				</ul>
-				<hr>
-				<ul>
-					<h3>
+					<h3 class="education__title">
 						Languages
 					</h3>
-					<li>Belarusian - Native</li>
-					<li>English - Intermediate</li>
-					<li>Russian - Proficiency</li>
-					<li>Ukrainian - Upper Intermediate</li>
+					<li><span class="education__language">Belarusian</span> - Native (Вельмі люблю беларускую мову, спрабую
+						пашыраць яе распаўсюд)</li>
+					<li><span class="education__language">Russian</span> - Proficiency</li>
+					<li><span class="education__language">Ukrainian</span> - Upper Intermediate</li>
+					<li><span class="education__language">English</span> - Intermediate (I am currently actively improving my
+						English)</li>
 				</ul>
-
 			</div>
 		</section>
 
