--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 		<section class="skills" id="skills">
 			<div class="container">
-				<h3 class="skills__title">My skills</h3>
+				<h3 class="skills__title title">My skills</h3>
 				<div class="skills__wrapper">
 					<ul class="skills__list">
 						<li class="skills__item"> <i class="fab fa-html5"></i> HTML5 / <i class="fab fa-css3-alt"></i> CSS3 /
@@ -149,7 +149,7 @@
 
 		<section class="education" id="education">
 			<div class="container">
-				<h3 class="education__title">Education</h3>
+				<h3 class="education__title title">Education</h3>
 				<div class="education__wrapper">
 					<ul class="education__ul">
 						<li class="education__first">
@@ -197,7 +197,7 @@
 
 		<section class="code" id="code">
 			<div class="container">
-				<h3 class="code__title">Code example</h3>
+				<h3 class="code__title title">Code example</h3>
 
 				<p class="code_subtitle">
 					This is a task &laquoCentury From Year&raquo from <a
@@ -224,11 +224,11 @@
 
 		<section class="projects" id="projects">
 			<div class="container">
-				<h3 class="education__title">My projects</h3>
+				<h3 class="projects__title title">My projects</h3>
 				<ul>
-					<li>Academy of the Ministry of Internal Affairs of the Republic of Belarus - Forensic examination
-						(2010-2015)</li>
-					<li>IT-school TeachMeSkills - React Front End Developer (21.01.2021-25.10.2021)</li>
+					<li><a class="projects__link" href="https://github.com/YauhenMurachou/FE07-wk-2-Murachou-Yauhen">Adaptive landing</a></li>
+					<li><a class="projects__link" href="https://github.com/YauhenMurachou/TMS_ToDo_Project/tree/users">Task manager by
+							React/Redux</a></li>
 				</ul>
 			</div>
 		</section>
