feat: add footer

--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
 						<p class="about__subtitle">Junior frontend-developer (React)
 
 						</p>
-						<a class="about__contact"
-							href="https://ru.wikipedia.org/wiki/%D0%A6%D0%B8%D1%84%D1%80%D0%BE%D0%B2%D0%BE%D0%B5_%D1%81%D0%BA%D0%B0%D1%87%D0%B8%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%BC%D1%83%D0%B7%D1%8B%D0%BA%D0%B8"
-							target="_blank">
-							Contact me</a>
+						<a class="about__contact" href="#footer">
+							Contact me </a>
 					</div>
 					<div class="about__rightrow">
 						<img src="./img/20200430_151419 — копия.jpg" class="about__avatar">
@@ -201,7 +199,7 @@
 
 				<p class="code_subtitle">
 					This is a task &laquoCentury From Year&raquo from <a
-						href="https://www.codewars.com/kata/5a3fe3dde1ce0e8ed6000097">codewars.com</a>
+						href="https://www.codewars.com/kata/5a3fe3dde1ce0e8ed6000097" target="_blank">codewars.com</a>
 				</p>
 
 				<pre class="code__block">
@@ -226,8 +224,10 @@
 			<div class="container">
 				<h3 class="projects__title title">My projects</h3>
 				<ul>
-					<li><a class="projects__link" href="https://github.com/YauhenMurachou/FE07-wk-2-Murachou-Yauhen">Adaptive landing</a></li>
-					<li><a class="projects__link" href="https://github.com/YauhenMurachou/TMS_ToDo_Project/tree/users">Task manager by
+					<li><a class="projects__link" href="https://github.com/YauhenMurachou/FE07-wk-2-Murachou-Yauhen"
+							target="_blank">Adaptive landing</a></li>
+					<li><a class="projects__link" href="https://github.com/YauhenMurachou/TMS_ToDo_Project/tree/users"
+							target="_blank">Task manager by
 							React/Redux</a></li>
 				</ul>
 			</div>
@@ -236,24 +236,17 @@
 
 	<footer class="footer" id="footer">
 		<div class="container">
+			<h3 class="footer__title title">My contacts</h3>
 			<div class="footer__wrapper">
 				<ul class="footer__list">
-					<li class="footer__icons"><a class="footer__link footer__facebook" href="https://www.facebook.com/"
-							target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-					<li class="footer__icons"><a class="footer__link footer__twitter" href="https://twitter.com/?lang=ru"
-							target="_blank"><i class="fab fa-twitter"></i></a></li>
-					<li class="footer__icons"><a class="footer__link footer__google" href="https://habr.com/ru/post/443728/"
-							target="_blank"><i class="fab fa-google-plus-g"></i></a></li>
-					<li class="footer__icons"><a class="footer__link footer__pinterest" href="https://www.pinterest.com/"
-							target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
-					<li class="footer__icons"><a class="footer__link footer__instagram"
-							href="https://www.instagram.com/?hl=ru" target="_blank"><i class="fab fa-instagram"></i></a></li>
-					<li class="footer__icons"><a class="footer__link footer__StumbleUpon" href="https://www.stumbleupon.com/"
-							target="_blank"><i class="fab fa-stumbleupon"></i></a></li>
-					<li class="footer__icons"><a class="footer__link footer__wifi" href="" target="_blank"><i
-								class="fas fa-wifi"></i></a></li>
+					<li class="footer__icons"><a class="footer__link footer__linkedin"
+							href="https://www.linkedin.com/in/yauhen-murachou-6a4842224/" target="_blank"><i
+								class="fab fa-linkedin"></i></a></li>
+					<li class="footer__icons"><a class="footer__link footer__github" href="https://github.com/YauhenMurachou"
+							target="_blank"><i class="fab fa-github"></i></a></li>
+				
 				</ul>
-				<p class="copyright">&copy; 2015 Axure Theme</p>
+				<p class="copyright">&copy; 2021 Yauhen Murachou <img class="footer__logo" src="./img/rs_school_js.svg" alt="RSSchool logo"></p>
 			</div>
 		</div>
 	</footer>
