fix: corrected errors from validator

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
 	<title>CV Yauhen Murachou</title>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 	<script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 </head>
 
 <body>
@@ -28,6 +26,7 @@
 					</ul>
 				</nav>
 			</div>
+		</div>
 	</header>
 
 	<main>
@@ -43,7 +42,7 @@
 							Contact me </a>
 					</div>
 					<div class="about__rightrow">
-						<img src="./img/20200430_151419 — копия.jpg" class="about__avatar">
+						<img src="./img/My_avatar.jpg" alt="My photo" class="about__avatar">
 					</div>
 				</div>
 
@@ -175,14 +174,14 @@
 					</ul>
 
 					<div class="education__img">
-						<img class="education__image" src="./img/pngwing.com.png" alt="">
+						<img class="education__image" src="./img/pngwing.com.png" alt="school logo">
 					</div>
 				</div>
 
+				<h3 class="education__title">
+					Languages
+				</h3>
 				<ul>
-					<h3 class="education__title">
-						Languages
-					</h3>
 					<li><span class="education__language">Belarusian</span> - Native (Вельмі люблю беларускую мову, спрабую
 						пашыраць яе распаўсюд)</li>
 					<li><span class="education__language">Russian</span> - Proficiency</li>
@@ -198,7 +197,7 @@
 				<h3 class="code__title title">Code example</h3>
 
 				<p class="code_subtitle">
-					This is a task &laquoCentury From Year&raquo from <a
+					This is a task &laquo;Century From Year&raquo; from <a
 						href="https://www.codewars.com/kata/5a3fe3dde1ce0e8ed6000097" target="_blank">codewars.com</a>
 				</p>
 
@@ -244,9 +243,10 @@
 								class="fab fa-linkedin"></i></a></li>
 					<li class="footer__icons"><a class="footer__link footer__github" href="https://github.com/YauhenMurachou"
 							target="_blank"><i class="fab fa-github"></i></a></li>
-				
+
 				</ul>
-				<p class="copyright">&copy; 2021 Yauhen Murachou <img class="footer__logo" src="./img/rs_school_js.svg" alt="RSSchool logo"></p>
+				<p class="copyright">&copy; 2021 Yauhen Murachou <img class="footer__logo" src="./img/rs_school_js.svg"
+						alt="RSSchool logo"></p>
 			</div>
 		</div>
 	</footer>
