feat: link in footer and in readme

--- a/index.html
+++ b/index.html
@@ -245,8 +245,10 @@
 							target="_blank"><i class="fab fa-github"></i></a></li>
 
 				</ul>
-				<p class="copyright">&copy; 2021 Yauhen Murachou <img class="footer__logo" src="./img/rs_school_js.svg"
-						alt="RSSchool logo"></p>
+				<p class="copyright">&copy; 2021 Yauhen Murachou <a href="https://rs.school/" target="_blank">
+					<img class="footer__logo" src="./img/rs_school_js.svg"
+							alt="RSSchool logo">
+				</a></p>
 			</div>
 		</div>
 	</footer>
