feat: add adaptive menu

--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 						<li class="header__item"><a class="header__link" href="#footer">My contacts</a></li>
 					</ul>
 				</nav>
+				<div class="hamburger">
+					<span class="line"></span>
+					<span class="line"></span>
+					<span class="line"></span>
+				</div>
+				<ul class="header__list-adaptive">
+					<li class="header__item-adaptive"><a class="header__link-adaptive" href="#description">About Me</a> </li>
+					<li class="header__item-adaptive"><a class="header__link-adaptive" href="#skills">Skills</a></li>
+					<li class="header__item-adaptive"><a class="header__link-adaptive" href="#education">Education</a></li>
+					<li class="header__item-adaptive"><a class="header__link-adaptive" href="#code">Code example</a></li>
+					<li class="header__item-adaptive"><a class="header__link-adaptive" href="#projects">Projects</a></li>
+					<li class="header__item-adaptive"><a class="header__link-adaptive" href="#footer">Contacts</a></li>
+				</ul>
 			</div>
 		</div>
 	</header>
@@ -255,7 +268,7 @@
 			</div>
 		</div>
 	</footer>
-
+	<script src="index.js"> </script>
 </body>
 
 </html>
