fix: corrected my projects

--- a/index.html
+++ b/index.html
@@ -239,13 +239,47 @@
 		<section class="projects" id="projects">
 			<div class="container">
 				<h3 class="projects__title title">My projects</h3>
-				<ul>
-					<li><a class="projects__link" href="https://github.com/YauhenMurachou/FE07-wk-2-Murachou-Yauhen"
-							target="_blank">Adaptive landing</a></li>
-					<li><a class="projects__link" href="https://github.com/YauhenMurachou/TMS_ToDo_Project/tree/users"
-							target="_blank">Task manager by
-							React/Redux</a></li>
+				<ul class="projects__list">
+					<li class="projects__item">
+						<a href="https://rolling-scopes-school.github.io/yauhenmurachou-JSFEPRESCHOOL/portfolio/"
+							target="_blank">
+							<img src="img/portfolio.png" width="908" height="477" alt="Portfolio screenshot"
+								class="projects__image">
+						</a>
+						<a class="projects__link"
+							href="https://rolling-scopes-school.github.io/yauhenmurachou-JSFEPRESCHOOL/portfolio/"
+							target="_blank">Photographer's portfolio</a>
+					</li>
+
+					<li class="projects__item">
+						<a href="https://yauhenmurachou.github.io/FE07-wk-2-Murachou-Yauhen/" target="_blank">
+							<img src="img/Adaptive_landing.png" width="908" height="477" alt="Adaptive landing screenshot"
+								class="projects__image">
+						</a>
+						<a class="projects__link" href="https://yauhenmurachou.github.io/FE07-wk-2-Murachou-Yauhen/"
+							target="_blank">Adaptive landing with slick slider</a>
+					</li>
+
+					<li class="projects__item">
+						<a href="https://yauhenmurachou.github.io/Murachou_Yauhen-JS_procrastination/" target="_blank">
+							<img src="img/Procrastination.png" width="908" height="477" alt="Procrastination screenshot"
+								class="projects__image">
+						</a>
+						<a class="projects__link" href="https://yauhenmurachou.github.io/Murachou_Yauhen-JS_procrastination/"
+							target="_blank">Time of procrastination. Native JS practice</a>
+					</li>
+
+					<li class="projects__item">
+						<a href="https://github.com/YauhenMurachou/TMS_ToDo_Project/tree/users" target="_blank">
+							<img src="img/ToDo.png" width="908" height="477" alt="Portfolio screenshot"
+								class="projects__image">
+						</a>
+						<a class="projects__link" href="https://github.com/YauhenMurachou/TMS_ToDo_Project/tree/users"
+							target="_blank">Task manager with the ability to edit, delete and add tasks, separation of roles
+							and authorization through web-token. Written by React</a>
+					</li>
 				</ul>
+
 			</div>
 		</section>
 	</main>
