feat: test of private contributions

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <div class="container">
           <h3 class="projects__title title">My projects</h3>
           <ul>
-            <li class="experience__project">
+            <li class="project__experience">
               <div class="left__side">
                 <h4 class="projects__subtitle">DS-Gym (15.02.2022 – 01.08.2022)</h4>
                 <div class="experience__item">
@@ -275,7 +275,7 @@
               <img src="img/gym.jpg" width="908" height="477" alt="Portfolio screenshot" class="projects__image" />
             </li>
 
-            <li class="experience__project">
+            <li class="project__experience">
               <div class="left__side">
                 <h4 class="projects__subtitle">FTR Dealing (01.09.2022 – 01.12.2022, 02.2023)</h4>
                 <div class="experience__item">
@@ -303,7 +303,7 @@
               <!-- </a> -->
             </li>
 
-            <li class="experience__project">
+            <li class="project__experience">
               <div class="left__side">
                 <h4 class="projects__subtitle">Service Forms (01.08.2022 - present)</h4>
                 <div class="experience__item">
@@ -329,7 +329,7 @@
               <img src="img/crm.jpg" width="908" height="477" alt="Procrastination screenshot" class="projects__image" />
             </li>
 
-            <li class="experience__project">
+            <li class="project__experience">
               <div class="left__side">
                 <h4 class="projects__subtitle">Pet-project Pobach (07.08.2021 - present)</h4>
                 <div class="experience__item">
